--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
 
   <div id="toast" class="toast hidden"></div>
 
-  <script src="script.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
